<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="@dimen/layaout_padding"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:text="@string/personal_info"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/robotomedium"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/filed_name"
            android:textSize="@dimen/subtitle_text_size"
            android:fontFamily="@font/robotoregular"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/name"
            android:inputType="textPersonName"
            android:hint="@string/hint_insert_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

        <TextView
            android:text="@string/field_phone"
            android:textSize="@dimen/subtitle_text_size"
            android:fontFamily="@font/robotoregular"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/phone"
            android:inputType="phone"
            android:hint="@string/hint_insert_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

        <TextView
            android:text="@string/field_scholarship"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/robotomedium"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/scholarship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/gender"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/robotomedium"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/gender_female"
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onGenderButtonCliked"/>
            <RadioButton
                android:id="@+id/gender_male"
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onGenderButtonCliked"/>
        </RadioGroup>

        <TextView
            android:text="@string/fav_book"
            android:textSize="@dimen/title_text_size"
            android:fontFamily="@font/robotomedium"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <AutoCompleteTextView
            android:hint="@string/hint_insert_fav_book"
            android:id="@+id/fav_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/do_sports"
            android:checked="false"
            android:text="@string/do_sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/button_clear"
        android:text="@string/clear"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/button_text_size"
        android:fontFamily="@font/robotomedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</RelativeLayout>